[metadata]
name = gmrt_raw_toguppi
version = 0.0.1
author = Avinash Kumar
author_email = avialxee@gmail.com
description = To read gmrt raw voltages file of GWB to convert to guppi raw.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avialxee/gmrt_raw_toguppi
project_urls =
    Bug Tracker = https://github.com/avialxee/gmrt_raw_toguppi/issues
[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src